# url-shortener

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  todo.py  url_shortener.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
completions/: README.md  todo.bash  todo.zsh
examples/: README.md  advanced_usage.py  basic_usage.py
tests/: __init__.py  test_todo.py
